--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -11,7 +11,7 @@
   flex: 50%;
   display: flex;
   justify-content: flex-end;
-  padding: 0% 10% 0% 10%;
+  padding: 0% 0% 0% 10%;
 }
 
 .aboutRightContainer {
@@ -24,7 +24,10 @@
 
 .aboutImage {
   border-radius: 50px;
-  width: 62.5%;
+  width: 80%;
+  align-items: left;
+  justify-content: left;
+  float: left;
 }
 
 
@@ -96,5 +99,9 @@
 
   .aboutLink {
     width: 100%;
+  }
+
+  .aboutLeftContainer {
+    padding: 0% 10% 0% 10%;
   }
 }
