--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -9,7 +9,6 @@ a:active { text-decoration: none; }
   justify-content: center;
   padding: 0% 0% 0% 0%;
   margin: 0% 0% 0% 0%;
-  border-radius: 0px;
   flex-direction: column;
   align-items: center;
   max-width: 100%;
@@ -92,6 +91,7 @@ a:active { text-decoration: none; }
 .twitterIcon {
   padding: 0% 1% 0% 0%;
   margin: -1% 0% 0% 0%;
+  width: 6%;
 }
 
 .navbarMobileContainer {
@@ -115,54 +115,13 @@ a:active { text-decoration: none; }
   overflow: hidden;
 }
 
-@media only screen and (max-width: 1100px) {
-  .navbarBoxImage {
-    display: none;
-  }
-  .navbarBox {
-    margin-top: 30px;
-  }
-  .navbarBoxTitle {
-    margin: 0px 0px 0px 0px;
-    font-size: 48px;
-  }
-  .navbar {
-    padding: 0 20px;
-    margin: 20px 20px;
-  }
-
-  .navbarIcon {
-    width: 8%;
-    
-  }
-
-  .navbarSocialsContainer {
-    margin: 4% -4% 0% 0%;
-  }
-
-  .navbarLogoImage {
-    width: 100%;
-    padding: 0% 0% 0% 0%;
-    margin: 0% 0% 0% 0%;
-  }
-
-  .twitterIcon {
-    transform: scale(2.1);
-    margin: 1.25% 3.8% 0% 0%;
-    padding: 0% 0% 0% 0%;
-  }
-}
-
 @media only screen and (max-width: 870px) {
   .navbar {
-    margin: 0px 0px 0px 0px;
+    max-width: 100vw;
+    margin: 0% 0% 0% 0%;
+    padding: 0% 0% 0% 0%;
   }
-  /*.navbarCenterBottom {
-    display: none;
-  }*/
-  .navbarBoxTitle {
-    font-size: 28px;
-  }
+  
 
   .navbarIcon {
     width: 8%;
@@ -170,18 +129,30 @@ a:active { text-decoration: none; }
   }
 
   .navbarSocialsContainer {
-    margin: 4% -4% 0% 0%;
+    margin: 0% 0% 0% 0%;
+    padding: 0% 0% 0% 0%;
   }
 
   .navbarLogoImage {
     width: 100%;
-    padding: 0% 0% 0% 0%;
+    padding: 0% 0% 0% 15%;
     margin: 0% 0% 0% 0%;
   }
 
   .twitterIcon {
-    transform: scale(2.1);
-    margin: 1.25% 3.8% 0% 0%;
+    width: 12%;
+    margin: 0% 0% 0% 0%;
     padding: 0% 0% 0% 0%;
   }
+
+  .linkedinIcon {
+    padding-top: 2%;
+  }
+
+  .instagramIcon {
+    padding-top: 2%;
+  }
 }
+
+
+
