--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -44,6 +44,10 @@
   color: black;
 }
 
+.servicesDescription {
+  color: #444444;
+}
+
 .paypalContainer {
   width: 100%;
   align-items: center;
@@ -51,14 +55,61 @@
   padding: 0% 0% 0% 0%;
 }
 
-.servicesLink:hover {
+
+.servicesFooter {
+  background-color: #ffffff;
+
+  text-align:center;
+}
+
+.servicesFooterIconContainer {
+  position: absolute;
+  margin-top: 8%;
+  right: 10%;
+  max-width: 45%;
+}
+
+.servicesFooterSocialsContainer {
+
+  max-width: 1920px;
+
+}
+
+
+.servicesFooterIcon {
+  width: 8%;
+  display: inline-block;
+  margin: 0% 0% 0% 4%;
+  padding: 0% 0% 0% 0%;
+}
+
+
+.twitterServicesFooterIcon {
+    padding: 0% 0% 0% 0%;
+    margin: 0% 0% 0% 0%;
+    width: 12%;
+}
+
+.linkedinServicesFooterIcon {
+  padding: 0% 2.5% 1.5% 0%;
+}
+
+.instagramServicesFooterIcon {
+  padding: 0% 0% 1.5% 0%;
+}
+
+
+
+.servicesLink:hover,
+.servicesFooterIcon:hover {
   -webkit-transform: scale(1.10);
   -moz-transform: scale(1.10);
   -o-transform: scale(1.10);
   transform: scale(1.10);
 }
 
-.servicesLink:active {
+.servicesLink:active,
+.servicesFooterIcon:active {
   -webkit-transform: scale(1.15);
   -moz-transform: scale(1.15);
   -o-transform: scale(1.15);
@@ -73,25 +124,32 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 40px;
     flex-direction: column;
+    max-width: 100vw;
+    margin: 0% 0% 0% 0%;
+    padding: 0% 0% 0% 0%;
   }
   .servicesBox {
     border-radius: 12px;
     width: 100%;
     max-width: 630px;
   }
-  .servicesRight {
-    align-items: center;
-    justify-content: center;
-  }
-  .servicesRightBottom {
-    max-width: 630px;
-    height: fit-content;
+  .servicesRightContainer {
+    background-color: black;
   }
   .servicesTextContainer {
-    padding: 0% 5% 0% 5%;
+    padding: 7% 0% 0% 4%;
     margin: 0% 0% 0% 0%;
+  }
+  
+  .servicesText {
+    color: white;
+    padding: 0% 0% 0% 0%;
+    margin: 0% 0% 0% 0%;
+  }
+
+  .servicesDescription {
+    color: #cccccc;
   }
 
   .servicesLink {
@@ -102,6 +160,39 @@
     width: 100%;
     align-items: center;
     justify-content: center;
-    padding: 0% 0% 0% 25%;
+    padding: 0% 0% 18% 25%;
+  }
+
+  .servicesFooterIconContainer {
+    position: relative;
+    padding-top: 20%;
+    padding-bottom: 30%;
+    right: 0%;
+    max-width: 100%;
+  }
+  
+
+  
+  
+  .servicesFooterIcon {
+    width: 15%;
+    display: inline-block;
+    margin: 0% 0% 0% 4%;
+    padding: 0% 0% 0% 0%;
+  }
+  
+  
+  .twitterServicesFooterIcon {
+      padding: 0% 0% 0% 0%;
+      margin: 0% 0% 0% 0%;
+      width: 22%;
+  }
+  
+  .linkedinServicesFooterIcon {
+    padding: 0% 3.5% 3% 0%;
+  }
+  
+  .instagramServicesFooterIcon {
+    padding: 0% 0% 3% 0%;
   }
 }
