--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -12,6 +12,7 @@ a:active { text-decoration: none; }
   flex-direction: column;
   align-items: center;
   max-width: 100%;
+  overflow: hidden;
 }
 
 .navbarContainer {
@@ -21,6 +22,7 @@ a:active { text-decoration: none; }
   
   align-items: flex-end;
   margin: 0px 0px 0px 0px;
+  overflow: hidden;
 }
 
 .navbarLeft {
