--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -5,6 +5,7 @@
   background-color: white;
   padding: 0% 0% 0% 0%;
   margin: 0% 0% 0% 0%;
+  overflow: hidden;
 }
 
 .servicesLeftContainer {
@@ -140,6 +141,7 @@
   .servicesTextContainer {
     padding: 7% 0% 0% 4%;
     margin: 0% 0% 0% 0%;
+    color: white;
   }
   
   .servicesText {
@@ -161,12 +163,13 @@
     align-items: center;
     justify-content: center;
     padding: 0% 0% 18% 25%;
+    font-size: 11.6px;
   }
 
   .servicesFooterIconContainer {
     position: relative;
     padding-top: 20%;
-    padding-bottom: 30%;
+    padding-bottom: 20%;
     right: 0%;
     max-width: 100%;
   }
