fixed mobile display of link to reduce risk with ai

--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -205,4 +205,9 @@
   .instagramServicesFooterIcon {
     padding: 0% 0% 3% 0%;
   }
+
+  .tokenMetricsCTA {
+    background-color: #ffffff;
+    text-align: center;
+  }
 }
