--- a/src/components/imageGeneratorGUI/imageGeneratorGUI.css
+++ b/src/components/imageGeneratorGUI/imageGeneratorGUI.css
@@ -32,10 +32,11 @@
 
 .imageGeneratorGUITitle {
   text-align: left;
-  color: white;
+  color: #bbbbbb;
+  text-decoration: 'none';
   font-size: 20px;
-  margin-top: 1%;
-  margin-bottom: .25%;
+  margin: 1% 0% .25% 0%;
+  white-space: nowrap;
 }
 
 
@@ -108,6 +109,7 @@
 .imageGeneratorGUIcopyNegativePromptButton {
   width: 260px;
   margin: 1.5% 0% 0.5% 0%;
+  white-space: nowrap;
 }
 
 .imageGeneratorGUIcopyNegativePromptTitle {
@@ -241,7 +243,7 @@
   }
 
   .imageGeneratorGUITitle {
-    font-size: 20.5px;
+    font-size: 19px;
     padding: 3% 0% 0% 0%;
     margin: 0% 0% 1% 0%;
   }
@@ -325,5 +327,9 @@
 
   .imageGeneratorGUI_imageOutputContainer {
     flex-direction: column;
+  }
+
+  .imageGeneratorGUIdropdownList {
+    width: 58px;
   }
 }
