--- a/src/components/imageGeneratorGUI/imageGeneratorGUI.css
+++ b/src/components/imageGeneratorGUI/imageGeneratorGUI.css
@@ -100,13 +100,13 @@
   margin-bottom: 2%;
 }
 
-.imageGeneratorGUInegativePromptContainer {
+.imageGeneratorGUIpromptContainer {
   flex-direction: row;
-  margin: 0% 0% 0% 0% !important;
-  padding: 0% 0% 0% 0% !important;
+  margin: 0% 0% 0% 0%;
+  padding: 0% 0% 0% 0%;
 }
 
-.imageGeneratorGUIcopyNegativePromptButton {
+.imageGeneratorGUIfloatRightButton {
   width: 260px;
   margin: 1.5% 0% 0.5% 0%;
   white-space: nowrap;
@@ -315,10 +315,10 @@
     font-size: 10px;
   }
 
-  .imageGeneratorGUIcopyNegativePromptButton {
+  .imageGeneratorGUIfloatRightButton {
     margin: 4.5% 0% 1% 0%;
     padding: 0% 0% 0% 0%;
-    width: 120px;
+    width: 150px;
   }
 
   .imageGeneratorGUInumberEntry {
