--- a/src/components/banner_textGenerator/banner_textgenerator.css
+++ b/src/components/banner_textGenerator/banner_textgenerator.css
@@ -6,7 +6,8 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  padding: 0% 0% 0% 0%;
+  background-color: #000000;
+  padding: 0% 0% 8% 0%;
   width: 100%;
   overflow: hidden;
 }
@@ -55,7 +56,7 @@
   .banner_textGeneratorContainer {
     max-width: 100vw;
     margin: 0% 0% 0% 0%;
-    padding: 0% 0% 0% 0%;
+    padding: 0% 0% 22% 0%;
   }
 
   .banner_textGeneratorTitleContainer {
