--- a/src/components/banner_tools/banner_tools.css
+++ b/src/components/banner_tools/banner_tools.css
@@ -1,4 +1,4 @@
-.banner_imageGeneratorContainer {
+.banner_toolsContainer {
   object-fit: cover;
   align-items: center;
   justify-content: center;
@@ -12,8 +12,10 @@
   background-color: #000000;
 }
 
-.banner_imagegenerator {
+.banner_tools {
   width: 100%;
+  margin: 0% 0% 0% 0%;
+  padding: 3% 0% 0% 0%;
   object-fit: cover;
   align-items: center;
   justify-content: center;
@@ -21,58 +23,61 @@
   display: flex;
   border-radius: 0px;
   overflow: hidden;
+  background-color: #000000;
 }
 
-.banner_imageGeneratorTitleContainer {
-  position: absolute;
+.banner_toolsTitleContainer {
   z-index: 10;
   color: #ffffff;
   background-color: #000000;
   border: solid;
   border-color: #ffffff;
-  border-radius: 25px;
+  /* border-radius: 25px; */
   padding: .25% 2% 1% 2%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 8px 15px 15px 0px rgba(0, 1, 1, 1);
+  /* box-shadow: 8px 15px 15px 0px rgba(0, 1, 1, 1); */
+  mask-image: linear-gradient(to right, transparent 0%, black 25%, black 75%, transparent 100%);
+  mask-repeat: no-repeat;
+  mask-size: 100% 100%;
+  width: 90%;
 }
 
-.banner_imageGeneratorTitle {
-  font-size: 35px;
+.banner_toolsTitle {
+  font-size: 45px;
 }
 
-.banner_imageGeneratorSubTitle {
+.banner_toolsSubTitle {
   font-size: 13px;
   color: #848484;
 }
 
 
 @media only screen and (max-width: 600px) {
-  .banner_imagegenerator {
-    width: 150%;
-    padding: 0% 0% 2% 0%;
+  .banner_tools {
+    padding: 5% 0% 5% 0%;
   }
 
-  .banner_imageGeneratorContainer {
+  .banner_toolsContainer {
     max-width: 100vw;
     margin: 0% 0% 0% 0%;
   }
 
-  .banner_imageGeneratorTitleContainer {
+  .banner_toolsTitleContainer {
     border-radius: 10px;
     border-width: 2px;
-    padding: 1% 3% 2.5% 3%;
+    padding: 0% 3% 1.5% 3%;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   
-  .banner_imageGeneratorTitle {
-    font-size: 17px;
+  .banner_toolsTitle {
+    font-size: 27px;
   }
   
-  .banner_imageGeneratorSubTitle {
+  .banner_toolsSubTitle {
     font-size: 11px;
   }
 }
