--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -98,7 +98,21 @@ a:active { text-decoration: none; }
   }
   
   .navbarCenter {
-    display: none;
+    padding: 0% 0% 0% 0%;
+    margin: -2% 20% 0% 0%;
+    align-items: left;
+    justify-content: left;
+    text-align: left;
+  }
+
+  .navbarCenterButton {
+    font-size: 13px;
+    border-width: 2px !important;
+    border: solid;
+    border-color: #000000;
+    border-radius: 20px;
+    padding: 1% 12% 4% 10%;
+    white-space: nowrap;
   }
 
   .navbarIcon {
