--- a/src/components/imageGeneratorGUI/imageGeneratorGUI.css
+++ b/src/components/imageGeneratorGUI/imageGeneratorGUI.css
@@ -14,7 +14,7 @@
 
 
 
-.imageGeneratorGUITextContainer {
+.imageGeneratorGUItextContainer {
   width: 50.5%;
   padding: 0px 0px 0px 0px;
   margin: 0px 0px 0px 0px;
@@ -155,8 +155,7 @@
   font-size: 15px;
   color: #000000;
   font-family: 'Arial';
-  width: 48.5%;
-  padding: .5% 1% .5% 1%;
+  padding: 1.5% 1% .5% 1%;
   margin: 0px 0px 0px 0px;
 }
 
@@ -166,8 +165,7 @@
   text-decoration: underline;
   color: #0008ff;
   font-family: 'Arial';
-  width: 48.5%;
-  padding: .5% 1% .5% 1%;
+  padding: .5% 1% 1.5% 1%;
   margin: 0px 0px 0px 0px;
 }
 
@@ -271,7 +269,7 @@
   }
   
 
-  .imageGeneratorGUITextContainer {
+  .imageGeneratorGUItextContainer {
     padding: 0% 0% 0% 0%;
     margin: 0% 0% 0% 0%;
     width: 90%;
