--- a/src/components/textGeneratorGUI/textGeneratorGUI.css
+++ b/src/components/textGeneratorGUI/textGeneratorGUI.css
@@ -159,8 +159,7 @@
   font-size: 15px;
   color: #000000;
   font-family: 'Arial';
-  width: 48.5%;
-  padding: .5% 1% .5% 1%;
+  padding: 1.5% 1% .5% 1%;
   margin: 0px 0px 0px 0px;
 }
 
@@ -181,8 +180,7 @@
   text-decoration: underline;
   color: #0008ff;
   font-family: 'Arial';
-  width: 48.5%;
-  padding: .5% 1% .5% 1%;
+  padding: .5% 1% 1.5% 1%;
   margin: 0px 0px 0px 0px;
 }
 
