--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -1,19 +1,19 @@
-.bannerContainer {
+.banner {
   object-fit: cover;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  display: block;
+  display: flex;
   margin-left: auto;
   margin-right: auto;
-  padding: 0% 0% 0% 0%;
-  max-width: 1080px;
-  min-height: 100vh;
   overflow: hidden;
 }
 
-.banner {
+.bannerImage {
   width: 100%;
+  padding: 0% 0% 0% 0%;
+  max-width: 1080px;
+  min-height: 100vh;
   object-fit: cover;
   align-items: center;
   justify-content: center;
@@ -29,7 +29,7 @@
     width: 100%;
   }
 
-  .bannerContainer {
+  .bannerImage {
     min-height: 30vh;
     max-width: 100vw;
     margin: 0% 0% 0% 0%;
