--- a/src/components/imageGeneratorGUI/imageGeneratorGUI.css
+++ b/src/components/imageGeneratorGUI/imageGeneratorGUI.css
@@ -103,7 +103,16 @@
   font-size: 18px;
   margin-top: 2%;
   margin-bottom: 2%;
+  padding: 2px 0px 2px 0px;
+  font-family: "Arial";
+  color: #000000;
+  background-color: #dbdbdb;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 1);
+  cursor: default;
 }
+
 
 .imageGeneratorGUIgenerationTimeContainer {
   align-items: center;
@@ -129,7 +138,7 @@
 }
 
 .imageGeneratorGUIcopyNegativePromptTitle {
-  width: 70%;
+  width: 50%;
 }
 
 
@@ -191,6 +200,7 @@
   margin: 1.5% 0% 0% 3%;
   font-size: 14px;
   opacity: 0;
+  white-space: nowrap;
 }
 
 .imageGeneratorGUIbannerContainer {
@@ -367,5 +377,9 @@
   .imageGeneratorGUInumberDisplay {
     margin: 4% 0% 0% 2%;
     width: 48px;
+  }
+
+  .imageGeneratorGUIcopiedMessage {
+    margin: 4% 0% 0% 3%;
   }
 }
