submit button fixes

--- a/src/components/imageGeneratorGUI/imageGeneratorGUI.css
+++ b/src/components/imageGeneratorGUI/imageGeneratorGUI.css
@@ -363,8 +363,7 @@
   }
 
   .imageGeneratorGUIfloatRightButton {
-    margin: 3% 0% 0% 0% !important;
-    padding: 6px 0px 2px 0px !important;
+    margin: 13px 0px 6px 0px !important;
   }
 
   .imageGeneratorGUInumberEntry {
