--- a/src/components/textGeneratorGUI/textGeneratorGUI.css
+++ b/src/components/textGeneratorGUI/textGeneratorGUI.css
@@ -110,6 +110,15 @@
   font-size: 18px;
   margin-top: 2%;
   margin-bottom: 2%;
+  padding: 2px 0px 2px 0px !important;
+  font-family: "Arial";
+  color: #000000;
+  background-color: #dbdbdb;
+  text-align: center;
+  align-items: center;
+  border-radius: 3px;
+  box-shadow: inset 0px 0px 3px rgba(0, 0, 0, 1);
+  cursor: default;
 }
 
 .textGeneratorGUIgenerationTimeContainer {
@@ -309,13 +318,13 @@
   }
 
   .textGeneratorGUImodelDescription {
-    width: 88%;
+    width: 98%;
     margin: 0% 0% 0% 0%;
     padding-bottom: 5%;
   }
 
   .textGeneratorGUImodelLink {
-    width: 88%;
+    width: 98%;
     margin: 0% 0% 0% 0%;
   }
 
@@ -384,5 +393,11 @@
 
   .textGeneratorGUIwordEntry {
     width: 40%;
+  }
+  
+  .textGeneratorGUIgenerateButton {
+    font-size: 17px;
+    width: 150px;
+    margin-top: 15px;
   }
 }
