--- a/src/components/banner_tools/banner_tools.css
+++ b/src/components/banner_tools/banner_tools.css
@@ -67,7 +67,7 @@
   .banner_toolsTitleContainer {
     border-radius: 10px;
     border-width: 2px;
-    padding: 0% 3% 1.5% 3%;
+    padding: 6px 0px 6px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
