added onTouchStart and onTouchEnd to submit buttons in ImageGeneratorGUI and TextGeneratorGUI and made all text outputs appear as columns instead of rows on mobile

--- a/src/components/textGeneratorGUI/textGeneratorGUI.css
+++ b/src/components/textGeneratorGUI/textGeneratorGUI.css
@@ -396,4 +396,9 @@
     width: 150px;
     margin-top: 15px;
   }
+
+  .textGeneratorGUItextOutputContainer {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
